[package]
name = "Rust_Server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15.7"
tower-http = { version = "0.5", features = ["cors"] }
axum-extra = { version = "0.9", features = ["cookie"] }
bcrypt = "0.15"
time = "0.3.47"
chrono = "0.4"
jsonwebtoken = "9"